--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
+h1,p,figure,img {
     margin: 0;
     padding: 0;
 }
@@ -28,23 +28,30 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
     background-color: black;
 }
 
-.electronic-music {
-    color: white;
-}
-
 #titulo h1 {
     font-size: 2.7em;
     padding-top: 20px;
+    color: white;
+}
+
+.titulo a img {
+    display: inline-block;
+}
+
+.logo-encabezado {
+    padding-left: 1px;
 }
 
 /*NOTA PRINCIPAL*/
 
 #nota-principal {
-    padding-top: 20px;
+    padding-top: 25px;
 }
 
 .sombra-imagen {
-    box-shadow:c 10px 10px;
+    box-shadow: 10px 10px;
+    box-shadow: 0 0 5px #9A06A7;
+    border-radius: 5%;
 }
 
 /*NOTA SECUNDARIA*/
@@ -108,16 +115,13 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
 .titulo-nota-secundaria a {
     color: #9A06A7;
     text-decoration: none;
+    transition: .5s;
 }
 
 .titulo-nota-secundaria a:hover {
     color: #01DBFE;
     text-decoration: underline;
-}
-
-.sombra-imagen {
-    box-shadow: 0 0 5px #9A06A7;
-    border-radius: 5%;
+    transition: .5s;
 }
 
 .ver-mas {
@@ -125,6 +129,7 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
     padding: 2px;
     background-color: #9A06A7;
     display: inline-block;
+    transition: .5s;
 }
 
 .ver-mas div {
@@ -144,6 +149,7 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
     padding: 2px;
     background-color: #01DBFE;
     display: inline-block;
+    transition: .5s;
 }
 
 .audio {
@@ -151,6 +157,18 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
     display: inline-block;
     padding-top: 10px;
     padding-left: 20px;
+}
+
+.flexible {
+    display: flex;
+}
+
+/*PAGINAS DJS*/
+
+#paginas-djs {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .audio-dj1 {
@@ -179,18 +197,6 @@ h1,h2,h3,h4,h5,h6,p,figure,ul,li,img {
     /*display: inline-block;*/
     padding-top: 10px;
     padding-left: 103px;
-}
-
-.flexible {
-    display: flex;
-}
-
-/*PAGINAS DJS*/
-
-#paginas-djs {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 20px;
 }
 
 /*PIE*/
