--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,11 @@ h1,p,figure,img {
     padding-left: 1px;
 }
 
+#disqueras {
+    display: flex;
+    justify-content: space-between;
+}
+
 /*NOTA PRINCIPAL*/
 
 #nota-principal {
